margin-top fixed on mobile version.

--- a/wp-content/themes/teachnova/assets/less/app.less
+++ b/wp-content/themes/teachnova/assets/less/app.less
@@ -100,7 +100,7 @@ pre {
    display: none;
 }
 article {
-   margin-top: 48px;
+   margin-top: 70px;
    margin-bottom: 50px;
    @media (min-width: @screen-hs-min) {
       margin-top: 90px;
